changed the email input type to text

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 			<h1>Register with Us</h1>
 			<label for="username">Username</label>
 			<input id="username" type="text" name="username" placeholder="Enter username" required>
-			<p class="username error"></p>
+			<p class="username error"> </p>
 			<label for="email">Email</label>
-			<input id="email" type="email" name="email" placeholder="Enter email" required>
-			<p class="email error"></p>
+			<input id="email" type="text" name="email" placeholder="Enter email" required>
+			<p class="email error"> </p>
 			<label for="password1">Password</label>
 			<input id="password1" type="password" name="password1" placeholder="Enter password" required>
-			<p class="password1 error"></p>
+			<p class="password1 error"> </p>
 			<label for="password2">Confirm password</label>
 			<input id="password2" type="password" name="password2" placeholder="Enter password again" required>
-			<p class="password2 error"></p>
+			<p class="password2 error"> </p>
 			<input type="submit" value="Submit"> 
 		</form>
 		
